iai-callgrind/tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.stderr
error: Invalid argument: wrong

         = help: Valid arguments are: `args`, `config`, `teardown`

 --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:8:13
  |
8 | #[bench::id(wrong = LibraryBenchmarkConfig::default())]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected an expression
  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:12:22
   |
12 | #[bench::id(config = )]
   |                      ^

error: Invalid argument: wrong

         = help: Valid arguments are: `args`, `config`, `setup`, `teardown`

  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:16:18
   |
16 | #[benches::wrong(wrong = LibraryBenchmarkConfig::default())]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected an expression
  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:23:1
   |
23 | #[library_benchmark]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InternalLibraryBenchmarkConfig: From<&str>` is not satisfied
 --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:4:22
  |
3 | #[library_benchmark]
  | -------------------- required by a bound introduced by this call
4 | #[bench::id(config = "some")]
  |                      ^^^^^^ the trait `From<&str>` is not implemented for `InternalLibraryBenchmarkConfig`
  |
  = help: the following other types implement trait `From<T>`:
            <InternalLibraryBenchmarkConfig as From<&LibraryBenchmarkConfig>>
            <InternalLibraryBenchmarkConfig as From<&mut LibraryBenchmarkConfig>>
            <InternalLibraryBenchmarkConfig as From<LibraryBenchmarkConfig>>
  = note: required for `&str` to implement `Into<InternalLibraryBenchmarkConfig>`

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:21:8
   |
19 | #[library_benchmark]
   | -------------------- an argument of type `i32` is missing
20 | #[benches::missing_args(config = LibraryBenchmarkConfig::default())]
21 | pub fn bench40(_arg: i32) {}
   |        ^^^^^^^
   |
note: function defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments_when_config.rs:21:8
   |
21 | pub fn bench40(_arg: i32) {}
   |        ^^^^^^^ ---------
help: provide the argument
   |
19 | bench40(/* i32 */)
   |
